# MadgineShadergen

./: CMakeLists.txt  CMakePresets.json  LICENSE  README.md  generateCPP.cpp  main.cpp  releaseptr.h  shadergenGLSL.cpp  shadergenGLSLES.cpp  shadergenHLSL.cpp  shadergenSPIRV.cpp
.github/workflows/: cmake-multi-platform.yml
ext/DirectXShaderCompiler/: CMakeLists.txt
